--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="style.css" rel="stylesheet" type="text/css">
   <title>Exercício CSS I</title>
 </head>
 
@@ -17,20 +18,25 @@
         <p>O CSS me deixou nos trinques</p>
       </article>
 
-      <article>
+      <article class="bloco" id="bloco-2">
         <h1>Eu sou um bloco com estilo!</h1>
         <p>O CSS me deixou nos trinques</p>
       </article>
 
-      <article>
+      <article class="bloco" id="bloco-3">
         <h1>Eu sou um bloco com estilo!</h1>
         <p>O CSS me deixou nos trinques</p>
       </article>
 
-      <article>
+      <article class="bloco" id="bloco-4">
         <h1>Eu sou um bloco com estilo!</h1>
         <p>O CSS me deixou nos trinques</p>
       </article>
+
+      <!-- <article class="bloco" id="bloco-5">
+        <h1>Eu sou um bloco com estilo!</h1>
+        <p>O CSS me deixou nos trinques</p>
+      </article> -->
 
     </section>
   </main>
